@@ -1,3 +1,6 @@
+Changes with melon 1.4.3                                          02 May 2016
+    *) Added an interface of hash table.
+
 Changes with melon 1.4.2                                          25 Apr 2016
     *) Optimized calculation of Big Number.
     *) Fixed some bugs of Big Number and HTTP.
